frontend/deploy/v0.2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crater-old-fe-ingress
  namespace: crater
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-gpu.act.buaa.edu.cn
      secretName: crater-tls-secret
  rules:
    - host: k8s-gpu.act.buaa.edu.cn
      http:
        paths:
          - path: /website
            pathType: Prefix
            backend:
              service:
                name: crater-website-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crater-old-fe-svc
                port:
                  number: 80
